# R2A

./: .env.example  .gitignore  AGENT_SETUP_PROMPT.md  CHANGELOG.md  DRY_RUN_GUIDE.md  LICENSE  README.md  README_DEPLOY.md  README_LOCAL_SETUP.md  TESTING_GUIDE.md  pyproject.toml  run_web.py
examples/acorn/: README.md  TASK_SPEC.md
r2a/: __init__.py  __main__.py  cli.py
r2a/agents/: __init__.py  engineer_agent.py  manager_agent.py  (+3 more)
r2a_web/: __init__.py  app.py  workspace_state.py
tests/: test_backend_errors.py  test_blocker_ledger.py  test_claude_health.py  test_claude_runner.py  test_claude_stage_runner.py  test_cli_codex_preflight.py  test_codex_cli.py  test_codex_executable_path.py  test_codex_runner.py  test_codex_stage_runner.py  test_contract_closure_smoke.py  test_contract_mode_and_schema_fix.py  test_contract_mode_fix.py  test_csv_checker.py  test_csv_writer.py  test_decision_aggregator.py  test_docker_policy.py  test_docker_runner.py  test_engineer_codex_execution.py  test_engineer_context_budget.py  test_engineer_runtime.py  test_evidence_level_model.py  test_evidence_levels.py  test_evidence_recognition_fixes.py  test_evidence_status_semantics.py  test_fake_success_bug.py  test_final_report.py  test_final_report_evidence_level_fix.py  test_final_report_failures.py  test_gateway_preflight.py  test_git_guard.py  test_input_contract_evidence.py  test_input_integrity.py  test_iteration_artifacts.py  test_iteration_boundary.py  test_iteration_smoke.py  test_l3_l4_prompt_continuation.py  test_log_checker.py  test_manager_agent.py  test_manager_blocked_task.py  (+77 more)
(+106 files in other folders)
